--- a/trunk/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
+++ b/trunk/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
@@ -44,6 +44,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\VIENNAAddIn\ext\IBM.Data.DB2.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Office.Interop.Word, Version=12.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Moq, Version=3.0.308.2, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -68,12 +69,21 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.DirectoryServices" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="UIAutomationProvider">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
     <Reference Include="WindowsBase">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="WindowsFormsIntegration">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
   </ItemGroup>
@@ -88,6 +98,7 @@
       <DependentUpon>SynchTaggedValuesTests.tt</DependentUpon>
     </Compile>
     <Compile Include="SynchTaggedValuesTest\SynchTaggedValuesTestRepository.cs" />
+    <Compile Include="upcc3\Wizards\dev\temporarymodel\bdtmodel\TemporaryBdtModelTest.cs" />
     <Compile Include="TestCategories.cs" />
     <Compile Include="TestRepository\CCTSEAExtensions.cs" />
     <Compile Include="TestRepository\EAConnectorEnd.cs" />
@@ -202,6 +213,10 @@
       <Project>{3C1352B8-1B53-46F9-BC18-BFF48115A606}</Project>
       <Name>VIENNAAddInUtils</Name>
     </ProjectReference>
+    <ProjectReference Include="..\VIENNAAddInWpfUserControls\VIENNAAddInWpfUserControls.csproj">
+      <Project>{D2B72E74-9717-42E0-9D43-0964D8B781BD}</Project>
+      <Name>VIENNAAddInWpfUserControls</Name>
+    </ProjectReference>
     <ProjectReference Include="..\VIENNAAddIn\VIENNAAddIn.csproj">
       <Project>{5642201A-D4A3-4F3B-9BC5-71C3A0DB7EA3}</Project>
       <Name>VIENNAAddIn</Name>
@@ -226,6 +241,7 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>SynchTaggedValuesTests.cs</LastGenOutput>
     </None>
+    <Shadow Include="Test References\VIENNAAddIn.accessor" />
     <None Include="upcc3\import\cctsndr\BDTImporterTestResources\BusinessDataType_BDTCanProhibitInheritanceOfSUPFromParentBDT.xsd" />
     <None Include="upcc3\import\cctsndr\BDTImporterTestResources\BusinessDataType_BDTInheritsCONFromParentBDT.xsd" />
     <None Include="upcc3\import\cctsndr\BDTImporterTestResources\BusinessDataType_BDTInheritsSUPsFromParentBDT.xsd" />
