--- a/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
+++ b/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
@@ -98,6 +98,8 @@
       <DependentUpon>SynchTaggedValuesTests.tt</DependentUpon>
     </Compile>
     <Compile Include="SynchTaggedValuesTest\SynchTaggedValuesTestRepository.cs" />
+    <Compile Include="upcc3\ea\CdtLibraryTestRepository.cs" />
+    <Compile Include="upcc3\ea\CdtLibraryTests.cs" />
     <Compile Include="upcc3\ea\EaUmlRepositoryTest.cs" />
     <Compile Include="upcc3\ea\EaCollectionTests.cs" />
     <Compile Include="upcc3\Wizards\dev\temporarymodel\abiemodel\TemporaryAbieModelTest.cs" />
