--- a/VIENNAAddInWpfUserControls/VIENNAAddInWpfUserControls.csproj
+++ b/VIENNAAddInWpfUserControls/VIENNAAddInWpfUserControls.csproj
@@ -50,6 +50,10 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="InlineFileSelector.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="FileSelector.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -60,6 +64,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InlineFileSelector.xaml.cs">
+      <DependentUpon>InlineFileSelector.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
