--- a/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/VIENNAAddIn/VIENNAAddIn.csproj
@@ -584,6 +584,7 @@
     <Compile Include="upcc3\Wizards\dev\ui\XsdImporterForm.xaml.cs">
       <DependentUpon>XsdImporterForm.xaml</DependentUpon>
     </Compile>
+    <Compile Include="upcc3\Wizards\dev\util\SchemaAnalyzerResults.cs" />
     <Compile Include="upcc3\Wizards\util\FileSelector.cs" />
     <Compile Include="upcc3\Wizards\ImporterWizardFormOld.cs">
       <SubType>Form</SubType>
