--- a/trunk/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
+++ b/trunk/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
@@ -88,6 +88,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EAPerformanceTest.cs" />
     <Compile Include="EARepositoryExtensionTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SynchTaggedValuesTest\HasTaggedValuesConstraint.cs" />
@@ -139,7 +140,7 @@
     <Compile Include="upcc3\ccts\otf\RepositoryContentLoaderTests.cs" />
     <Compile Include="upcc3\ccts\otf\ValidatingCCRepositoryIntegrationTests.cs" />
     <Compile Include="upcc3\ccts\util\MultiPartTaggedValueTests.cs" />
-    <Compile Include="upcc3\import\cctsndr\BDTXsdImporterTests.cs" />
+    <Compile Include="upcc3\export\import\cctsndr\BDTXsdImporterTests.cs" />
     <Compile Include="upcc3\Wizards\dev\TestRepository\EARepositoryBdtEditor.cs" />
     <Compile Include="upcc3\Wizards\dev\ui\AbieEditorFormTest.cs" />
     <Compile Include="upcc3\Wizards\dev\cache\CcCacheTest.cs" />
@@ -148,6 +149,7 @@
     <Compile Include="upcc3\Wizards\dev\ui\StandardLibraryImporterFormTest.cs" />
     <Compile Include="upcc3\Wizards\dev\ui\UpccModelCreatorFormTest.cs" />
     <Compile Include="upcc3\Wizards\dev\TestRepository\EARepositoryAbieEditor.cs" />
+    <Compile Include="upcc3\Wizards\dev\util\XMLSchemaReaderTest.cs" />
     <Compile Include="upcc3\Wizards\TestRepository\EARepositoryLibraryImporter.cs" />
     <Compile Include="upcc3\Wizards\TestRepository\EARepositoryModelCreator.cs" />
     <Compile Include="upcc3\Wizards\dev\TestRepository\EARepositoryCcCache.cs" />
@@ -161,14 +163,14 @@
     <Compile Include="upcc3\Wizards\StandardLibraryImporterFormTest.cs" />
     <Compile Include="upcc3\Wizards\util\VersionDescriptorTest.cs" />
     <Compile Include="upcc3\Wizards\util\VersionHandlerTest.cs" />
-    <Compile Include="upcc3\import\cctsndr\XSDImporterTest.cs" />
-    <Compile Include="upcc3\import\ebInterface\MapForceMappingImporterTest.cs" />
-    <Compile Include="upcc3\import\ebInterface\MapForceSourceElementTreeTests.cs" />
-    <Compile Include="upcc3\import\ebInterface\SchemaMappingTests.cs" />
-    <Compile Include="upcc3\import\ebInterface\MappingImporterTests.cs" />
-    <Compile Include="upcc3\import\ebInterface\MappingTestRepository.cs" />
-    <Compile Include="upcc3\import\ebInterface\TargetElementStoreTests.cs" />
-    <Compile Include="upcc3\import\util\CustomSchemaReaderTest.cs" />
+    <Compile Include="upcc3\export\import\cctsndr\XSDImporterTest.cs" />
+    <Compile Include="upcc3\export\import\ebInterface\MapForceMappingImporterTest.cs" />
+    <Compile Include="upcc3\export\import\ebInterface\MapForceSourceElementTreeTests.cs" />
+    <Compile Include="upcc3\export\import\ebInterface\SchemaMappingTests.cs" />
+    <Compile Include="upcc3\export\import\ebInterface\MappingImporterTests.cs" />
+    <Compile Include="upcc3\export\import\ebInterface\MappingTestRepository.cs" />
+    <Compile Include="upcc3\export\import\ebInterface\TargetElementStoreTests.cs" />
+    <Compile Include="upcc3\export\import\util\CustomSchemaReaderTest.cs" />
     <Compile Include="Utils\EAAssert.cs" />
     <Compile Include="Utils\PropertyEqualityAssertion.cs" />
     <Compile Include="Utils\PropertyEqualityAssertionTest.cs" />
@@ -240,21 +242,18 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>SynchTaggedValuesTests.cs</LastGenOutput>
     </None>
-    <None Include="upcc3\import\cctsndr\BDTImporterTestResources\BusinessDataType_BDTCanProhibitInheritanceOfSUPFromParentBDT.xsd" />
-    <None Include="upcc3\import\cctsndr\BDTImporterTestResources\BusinessDataType_BDTInheritsCONFromParentBDT.xsd" />
-    <None Include="upcc3\import\cctsndr\BDTImporterTestResources\BusinessDataType_BDTInheritsSUPsFromParentBDT.xsd" />
-    <None Include="upcc3\import\cctsndr\BDTImporterTestResources\BusinessDataType_complex_type.xsd" />
-    <None Include="upcc3\import\cctsndr\BDTImporterTestResources\BusinessDataType_CONFacetsAreAppliedToComplexTypes.xsd" />
-    <None Include="upcc3\import\cctsndr\BDTImporterTestResources\BusinessDataType_CONFacetsAreAppliedToSimpleTypes.xsd" />
-    <None Include="upcc3\import\cctsndr\BDTImporterTestResources\BusinessDataType_ResolvesBDTTypeNamesAccordingToTheNDR.xsd" />
-    <None Include="upcc3\import\cctsndr\BDTImporterTestResources\BusinessDataType_simple_type.xsd" />
-    <None Include="upcc3\import\cctsndr\BDTImporterTestResources\BusinessDataType_SUPBasicTypesAreDeterminedFromXsdTypes.xsd" />
+    <None Include="upcc3\export\import\cctsndr\BDTImporterTestResources\BusinessDataType_BDTCanProhibitInheritanceOfSUPFromParentBDT.xsd" />
+    <None Include="upcc3\export\import\cctsndr\BDTImporterTestResources\BusinessDataType_BDTInheritsCONFromParentBDT.xsd" />
+    <None Include="upcc3\export\import\cctsndr\BDTImporterTestResources\BusinessDataType_BDTInheritsSUPsFromParentBDT.xsd" />
+    <None Include="upcc3\export\import\cctsndr\BDTImporterTestResources\BusinessDataType_complex_type.xsd" />
+    <None Include="upcc3\export\import\cctsndr\BDTImporterTestResources\BusinessDataType_CONFacetsAreAppliedToComplexTypes.xsd" />
+    <None Include="upcc3\export\import\cctsndr\BDTImporterTestResources\BusinessDataType_CONFacetsAreAppliedToSimpleTypes.xsd" />
+    <None Include="upcc3\export\import\cctsndr\BDTImporterTestResources\BusinessDataType_ResolvesBDTTypeNamesAccordingToTheNDR.xsd" />
+    <None Include="upcc3\export\import\cctsndr\BDTImporterTestResources\BusinessDataType_simple_type.xsd" />
+    <None Include="upcc3\export\import\cctsndr\BDTImporterTestResources\BusinessDataType_SUPBasicTypesAreDeterminedFromXsdTypes.xsd" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{B4F97281-0DBD-4835-9ED8-7DFB966E87FF}" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="upcc3\Wizards\dev\util\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
